--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # MySQL Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/teacher8db?serverTimezone=UTC
-spring.datasource.username=teacher8
-spring.datasource.password=12345
+spring.datasource.url=jdbc:mysql://localhost:3306/mydatabase?serverTimezone=UTC
+spring.datasource.username=username  
+spring.datasource.password=password
 # MySQL Database Configuration
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
