--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # MySQL Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/mydatabase?serverTimezone=UTC
-spring.datasource.username=username  
-spring.datasource.password=password
+spring.datasource.username=myusername
+spring.datasource.password=mypassword
 # MySQL Database Configuration
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -16,3 +16,7 @@ logging.level.gr.aueb.cf.project8=DEBUG
 
 
 
+# Set the maximum file size (default is 1MB)
+spring.servlet.multipart.max-file-size=10MB
+# Set the maximum request size (default is 1MB)
+spring.servlet.multipart.max-request-size=10MB
