draft menu added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,10 +13,11 @@ spring.jpa.show-sql=true
 logging.level.org.springframework=INFO
 logging.level.gr.aueb.cf.project8=DEBUG
 
-
-
-
-# Set the maximum file size (default is 1MB)
+#maximum file size
 spring.servlet.multipart.max-file-size=10MB
-# Set the maximum request size (default is 1MB)
+#maximum request size
 spring.servlet.multipart.max-request-size=10MB
+logging.file.name=mylogfile.log
+
+# Log level for root logger and specific packages
+logging.level.root=INFO
